Add API key.
